First commited as before_57947_rev1