@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2016 IBM Corporation and others.
+ * Copyright (c) 2006, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -8,12 +8,9 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *     Andrey Loskutov <loskutov@gmx.de> - Bug 372799
- *     Patrik Suzzi <psuzzi@gmail.com> - Bug 490700
  *******************************************************************************/
 
 package org.eclipse.ui.internal;
-
-import static org.eclipse.swt.events.SelectionListener.widgetSelectedAdapter;
 
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -41,6 +38,8 @@ import org.eclipse.jface.viewers.IStructuredContentProvider;
 import org.eclipse.jface.window.IShellProvider;
 import org.eclipse.osgi.util.NLS;
 import org.eclipse.swt.SWT;
+import org.eclipse.swt.events.SelectionAdapter;
+import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.layout.GridData;
 import org.eclipse.swt.layout.GridLayout;
 import org.eclipse.swt.widgets.Button;
@@ -74,7 +73,7 @@ import org.eclipse.ui.model.WorkbenchPartLabelProvider;
  */
 public class SaveablesList implements ISaveablesLifecycleListener {
 
-	private ListenerList<ISaveablesLifecycleListener> listeners = new ListenerList<>();
+	private ListenerList listeners = new ListenerList();
 
 	// event source (mostly ISaveablesSource) -> Set of Saveable
 	private Map<Object, Set<Saveable>> modelMap = new HashMap<>();
@@ -134,9 +133,9 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 		Integer refCount = referenceMap.get(key);
 		if (refCount == null) {
 			result = true;
-			refCount = Integer.valueOf(0);
+			refCount = new Integer(0);
 		}
-		referenceMap.put(key, Integer.valueOf(refCount.intValue() + 1));
+		referenceMap.put(key, new Integer(refCount.intValue() + 1));
 		return result;
 	}
 
@@ -156,7 +155,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 			referenceMap.remove(key);
 			result = true;
 		} else {
-			referenceMap.put(key, Integer.valueOf(refCount.intValue() - 1));
+			referenceMap.put(key, new Integer(refCount.intValue() - 1));
 		}
 		return result;
 	}
@@ -305,8 +304,10 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param event
 	 */
 	private void fireModelLifecycleEvent(SaveablesLifecycleEvent event) {
-		for (ISaveablesLifecycleListener listener : listeners) {
-			listener.handleLifecycleEvent(event);
+		Object[] listenerArray = listeners.getListeners();
+		for (int i = 0; i < listenerArray.length; i++) {
+			((ISaveablesLifecycleListener) listenerArray[i])
+					.handleLifecycleEvent(event);
 		}
 	}
 
@@ -454,9 +455,8 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param modelsDecrementing
 	 */
 	private void fillModelsClosing(Set<Saveable> modelsClosing, Map<Saveable, Integer> modelsDecrementing) {
-		for (Entry<Saveable, Integer> entry : modelsDecrementing.entrySet()) {
-			Saveable model = entry.getKey();
-			if (entry.getValue().equals(modelRefCounts.get(model))) {
+		for (Saveable model : modelsDecrementing.keySet()) {
+			if (modelsDecrementing.get(model).equals(modelRefCounts.get(model))) {
 				modelsClosing.add(model);
 			}
 		}
@@ -530,7 +530,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 									model.getName());
 					dialog = new MessageDialog(shellProvider.getShell(),
 							WorkbenchMessages.Save_Resource, null, message,
-							MessageDialog.QUESTION, 0, buttons) {
+							MessageDialog.QUESTION, buttons, 0) {
 						@Override
 						protected int getShellStyle() {
 							return (canCancel ? SWT.CLOSE : SWT.NONE)
@@ -649,23 +649,26 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 */
 	public boolean saveModels(final List<Saveable> finalModels, final IShellProvider shellProvider,
 			IRunnableContext runnableContext, final boolean blockUntilSaved) {
-		IRunnableWithProgress progressOp = monitor -> {
-			IProgressMonitor monitorWrap = new EventLoopProgressMonitor(monitor);
-			SubMonitor subMonitor = SubMonitor.convert(monitorWrap, WorkbenchMessages.Saving_Modifications,
-					finalModels.size());
-			for (Saveable model : finalModels) {
-				// handle case where this model got saved as a result of
-				// saving another
-				if (!model.isDirty()) {
-					subMonitor.worked(1);
-					continue;
+		IRunnableWithProgress progressOp = new IRunnableWithProgress() {
+			@Override
+			public void run(IProgressMonitor monitor) {
+				IProgressMonitor monitorWrap = new EventLoopProgressMonitor(monitor);
+				SubMonitor subMonitor = SubMonitor.convert(monitorWrap, WorkbenchMessages.Saving_Modifications,
+						finalModels.size());
+				for (Saveable model : finalModels) {
+					// handle case where this model got saved as a result of
+					// saving another
+					if (!model.isDirty()) {
+						subMonitor.worked(1);
+						continue;
+					}
+					SaveableHelper.doSaveModel(model, subMonitor.newChild(1),
+							shellProvider, blockUntilSaved);
+					if (subMonitor.isCanceled())
+						break;
 				}
-				SaveableHelper.doSaveModel(model, subMonitor.split(1),
-						shellProvider, blockUntilSaved);
-				if (subMonitor.isCanceled())
-					break;
+				monitorWrap.done();
 			}
-			monitorWrap.done();
 		};
 
 		// Do the save.
@@ -806,7 +809,12 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 				 checkboxComposite.setLayout(new GridLayout(2, false));
 
 				 checkbox = new Button(checkboxComposite, SWT.CHECK);
-				 checkbox.addSelectionListener(widgetSelectedAdapter(e -> dontPromptSelection = checkbox.getSelection()));
+				 checkbox.addSelectionListener(new SelectionAdapter() {
+					@Override
+					public void widgetSelected(SelectionEvent e) {
+						dontPromptSelection = checkbox.getSelection();
+					}
+				 });
 				 GridData gd = new GridData();
 				 gd.horizontalAlignment = SWT.BEGINNING;
 				 checkbox.setLayoutData(gd);
