@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2003, 2016 IBM Corporation and others.
+ * Copyright (c) 2003, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -10,12 +10,9 @@
  *     Cornel Izbasa <cizbasa@info.uvt.ro> - Bug 436247
  *     Lars Vogel <Lars.Vogel@vogella.com> - Bug 440136, 472654
  *     Robert Roth <robert.roth.off@gmail.com> - Bugs 274005, 456291
- *     Mickael Istria (Red Hat Inc.) - Theme and fontregistry rather than pref
- *     Patrik Suzzi <psuzzi@gmail.com> - Bug 489250
  *******************************************************************************/
 package org.eclipse.ui.internal.themes;
 
-import static org.eclipse.swt.events.SelectionListener.widgetSelectedAdapter;
 import static org.eclipse.ui.internal.themes.WorkbenchThemeManager.EMPTY_COLOR_VALUE;
 
 import com.ibm.icu.text.MessageFormat;
@@ -38,13 +35,17 @@ import org.eclipse.jface.resource.JFaceResources;
 import org.eclipse.jface.resource.StringConverter;
 import org.eclipse.jface.util.IPropertyChangeListener;
 import org.eclipse.jface.util.PropertyChangeEvent;
+import org.eclipse.jface.viewers.DoubleClickEvent;
 import org.eclipse.jface.viewers.IColorProvider;
+import org.eclipse.jface.viewers.IDoubleClickListener;
 import org.eclipse.jface.viewers.IFontProvider;
 import org.eclipse.jface.viewers.ISelection;
+import org.eclipse.jface.viewers.ISelectionChangedListener;
 import org.eclipse.jface.viewers.IStructuredSelection;
 import org.eclipse.jface.viewers.ITreeContentProvider;
 import org.eclipse.jface.viewers.LabelProvider;
 import org.eclipse.jface.viewers.LabelProviderChangedEvent;
+import org.eclipse.jface.viewers.SelectionChangedEvent;
 import org.eclipse.jface.viewers.StructuredSelection;
 import org.eclipse.jface.viewers.TreeViewer;
 import org.eclipse.jface.viewers.Viewer;
@@ -52,6 +53,12 @@ import org.eclipse.jface.viewers.ViewerComparator;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.custom.SashForm;
 import org.eclipse.swt.custom.StackLayout;
+import org.eclipse.swt.events.DisposeEvent;
+import org.eclipse.swt.events.DisposeListener;
+import org.eclipse.swt.events.PaintEvent;
+import org.eclipse.swt.events.PaintListener;
+import org.eclipse.swt.events.SelectionAdapter;
+import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.graphics.Color;
 import org.eclipse.swt.graphics.Font;
 import org.eclipse.swt.graphics.FontData;
@@ -84,6 +91,7 @@ import org.eclipse.ui.internal.WorkbenchMessages;
 import org.eclipse.ui.internal.WorkbenchPlugin;
 import org.eclipse.ui.internal.misc.StatusUtil;
 import org.eclipse.ui.internal.util.PrefUtil;
+import org.eclipse.ui.internal.util.Util;
 import org.eclipse.ui.themes.ITheme;
 import org.eclipse.ui.themes.IThemeManager;
 import org.eclipse.ui.themes.IThemePreview;
@@ -354,16 +362,19 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
         private int usableImageSize = -1;
 
-        private IPropertyChangeListener listener = event -> {
-			if (event.getNewValue() != null) {
-				fireLabelProviderChanged(new LabelProviderChangedEvent(
-						PresentationLabelProvider.this));
-			} else {
-				// Some theme definition element has been modified and we
-				// need to refresh the viewer
-				refreshAllLabels();
-			}
-		};
+        private IPropertyChangeListener listener = new IPropertyChangeListener() {
+            @Override
+			public void propertyChange(PropertyChangeEvent event) {
+				if (event.getNewValue() != null) {
+					fireLabelProviderChanged(new LabelProviderChangedEvent(
+							PresentationLabelProvider.this));
+				} else {
+					// Some theme definition element has been modified and we
+					// need to refresh the viewer
+					refreshAllLabels();
+				}
+            }
+        };
 
         private Image emptyImage;
 
@@ -498,22 +509,19 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             if (element instanceof IHierarchalThemeElementDefinition) {
                 IHierarchalThemeElementDefinition themeElement = (IHierarchalThemeElementDefinition) element;
 				if (themeElement.getDefaultsTo() != null) {
-					String myCategory = ((ICategorizedThemeElementDefinition) themeElement).getCategoryId();
-					ICategorizedThemeElementDefinition def;
-					if (element instanceof ColorDefinition) {
+                    String myCategory = ((ICategorizedThemeElementDefinition) themeElement).getCategoryId();
+                    ICategorizedThemeElementDefinition def;
+                    if (element instanceof ColorDefinition)
 						def = themeRegistry.findColor(themeElement.getDefaultsTo());
-					} else {
+					else
 						def = themeRegistry.findFont(themeElement.getDefaultsTo());
-					}
-					if (def != null && !ColorsAndFontsPreferencePage.equals(def.getCategoryId(), myCategory)) {
-						if (isDefault(themeElement)) {
-							return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_default"), //$NON-NLS-1$
-									themeElement.getName(), def.getName());
-						}
-						return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_override"), //$NON-NLS-1$
-								themeElement.getName(), def.getName());
-					}
-				}
+
+                    if (!ColorsAndFontsPreferencePage.equals(def.getCategoryId(), myCategory)) {
+                    	if (isDefault(themeElement))
+							return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_default"), new Object[] { themeElement.getName(), def.getName() }); //$NON-NLS-1$
+               			return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_override"), new Object[] { themeElement.getName(), def.getName() }); //$NON-NLS-1$
+                    }
+                }
             }
             return ((IThemeElementDefinition) element).getName();
         }
@@ -674,12 +682,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	/**
 	 * Map of definition id->FontData[] capturing the temporary changes caused
 	 * by a 'defaultsTo' font change.
-	 *
-	 * @deprecated in this page, we should only care about preferences,
-	 *             preference to fontValues synchronization in registry is
-	 *             handled in the ThemeAPI and listeners
 	 */
-	@Deprecated
     private Map fontValuesToSet = new HashMap(7);
 
     /**
@@ -864,10 +867,13 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	protected Control createContents(Composite parent) {
     	PlatformUI.getWorkbench().getHelpSystem().setHelp(parent, IWorkbenchHelpContextIds.FONTS_PREFERENCE_PAGE);
 
-        parent.addDisposeListener(e -> {
-		    if (appliedDialogFont != null)
-				appliedDialogFont.dispose();
-		});
+        parent.addDisposeListener(new DisposeListener() {
+            @Override
+			public void widgetDisposed(DisposeEvent e) {
+                if (appliedDialogFont != null)
+					appliedDialogFont.dispose();
+            }
+        });
 
 		final SashForm advancedComposite = new SashForm(parent, SWT.VERTICAL);
 		GridData sashData = new GridData(SWT.FILL, SWT.FILL, true, true);
@@ -1012,23 +1018,26 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 			}
 		});
 		tree.getViewer().setInput(WorkbenchPlugin.getDefault().getThemeRegistry());
-		tree.getViewer().addDoubleClickListener(event -> {
-			IStructuredSelection s = (IStructuredSelection) event.getSelection();
-			Object element = s.getFirstElement();
-			if (tree.getViewer().isExpandable(element))
-				tree.getViewer().setExpandedState(element,
-						!tree.getViewer().getExpandedState(element));
+		tree.getViewer().addDoubleClickListener(new IDoubleClickListener() {
+			@Override
+			public void doubleClick(DoubleClickEvent event) {
+				IStructuredSelection s = (IStructuredSelection) event.getSelection();
+				Object element = s.getFirstElement();
+				if (tree.getViewer().isExpandable(element))
+					tree.getViewer().setExpandedState(element,
+							!tree.getViewer().getExpandedState(element));
 
-			if (element instanceof ThemeElementDefinition) {
-				ThemeElementDefinition definition = (ThemeElementDefinition) element;
+				if (element instanceof ThemeElementDefinition) {
+					ThemeElementDefinition definition = (ThemeElementDefinition) element;
 
-				if (element instanceof FontDefinition) {
-					editFont(tree.getDisplay());
-				} else if (element instanceof ColorDefinition
-						&& isAvailableInCurrentTheme(definition)) {
-					editColor(tree.getDisplay());
+					if (element instanceof FontDefinition) {
+						editFont(tree.getDisplay());
+					} else if (element instanceof ColorDefinition
+							&& isAvailableInCurrentTheme(definition)) {
+						editColor(tree.getDisplay());
+					}
+					updateControls();
 				}
-				updateControls();
 			}
 		});
 
@@ -1210,95 +1219,124 @@ getPreferenceStore(),
      */
     private void hookListeners() {
         TreeViewer viewer = tree.getViewer();
-		viewer.addSelectionChangedListener(event -> updateTreeSelection(event.getSelection()));
+		viewer.addSelectionChangedListener(new ISelectionChangedListener() {
+                @Override
+				public void selectionChanged(SelectionChangedEvent event) {
+                    updateTreeSelection(event.getSelection());
+                }
+		});
 
-        fontChangeButton.addSelectionListener(widgetSelectedAdapter(event -> {
-			Display display = event.display;
-			if (isFontSelected())
-				editFont(display);
-			else if (isColorSelected())
-				editColor(display);
-			updateControls();
-		}));
+        fontChangeButton.addSelectionListener(new SelectionAdapter() {
+            @Override
+			public void widgetSelected(SelectionEvent event) {
+            	Display display = event.display;
+            	if (isFontSelected())
+            		editFont(display);
+            	else if (isColorSelected())
+            		editColor(display);
+            	updateControls();
+            }
+        });
 
-        fontResetButton.addSelectionListener(widgetSelectedAdapter(e -> {
-			if (isFontSelected())
-				resetFont(getSelectedFontDefinition(), false);
-			else if (isColorSelected())
-				resetColor(getSelectedColorDefinition(), false);
-			updateControls();
-		}));
+        fontResetButton.addSelectionListener(new SelectionAdapter() {
 
-        fontSystemButton.addSelectionListener(widgetSelectedAdapter(event -> {
-		    FontDefinition definition = getSelectedFontDefinition();
-		    if (definition == null)
-		    	return;
-		    FontData[] defaultFontData = JFaceResources.getDefaultFont().getFontData();
-			setFontPreferenceValue(definition, defaultFontData, false);
-		    updateControls();
-		}));
+            @Override
+			public void widgetSelected(SelectionEvent e) {
+            	if (isFontSelected())
+					resetFont(getSelectedFontDefinition(), false);
+            	else if (isColorSelected())
+					resetColor(getSelectedColorDefinition(), false);
+            	updateControls();
+            }
+        });
 
-		editDefaultButton.addSelectionListener(widgetSelectedAdapter(event -> {
-			Display display = event.display;
-			FontDefinition fontDefinition = getSelectedFontDefinition();
-			if (fontDefinition != null) {
-				String defaultFontId = fontDefinition.getDefaultsTo();
-				FontDefinition defaultFontDefinition = themeRegistry.findFont(defaultFontId);
-				editFont(defaultFontDefinition, display);
-			} else {
-				ColorDefinition colorDefinition = getSelectedColorDefinition();
-				if (colorDefinition != null) {
-					String defaultColorId = colorDefinition.getDefaultsTo();
-					ColorDefinition defaultColorDefinition = themeRegistry
-							.findColor(defaultColorId);
-					editColor(defaultColorDefinition, display);
+        fontSystemButton.addSelectionListener(new SelectionAdapter() {
+            @Override
+			public void widgetSelected(SelectionEvent event) {
+                FontDefinition definition = getSelectedFontDefinition();
+                if (definition == null)
+                	return;
+                FontData[] defaultFontData = JFaceResources.getDefaultFont().getFontData();
+				setFontPreferenceValue(definition, defaultFontData, false);
+                updateControls();
+            }
+        });
+
+		editDefaultButton.addSelectionListener(new SelectionAdapter() {
+			@Override
+			public void widgetSelected(SelectionEvent event) {
+				Display display = event.display;
+				FontDefinition fontDefinition = getSelectedFontDefinition();
+				if (fontDefinition != null) {
+					String defaultFontId = fontDefinition.getDefaultsTo();
+					FontDefinition defaultFontDefinition = themeRegistry.findFont(defaultFontId);
+					editFont(defaultFontDefinition, display);
+				} else {
+					ColorDefinition colorDefinition = getSelectedColorDefinition();
+					if (colorDefinition != null) {
+						String defaultColorId = colorDefinition.getDefaultsTo();
+						ColorDefinition defaultColorDefinition = themeRegistry
+								.findColor(defaultColorId);
+						editColor(defaultColorDefinition, display);
+					}
 				}
+				updateControls();
 			}
-			updateControls();
-		}));
+		});
 
-		goToDefaultButton.addSelectionListener(widgetSelectedAdapter(event -> {
-			FontDefinition fontDefinition = getSelectedFontDefinition();
-			if (fontDefinition != null) {
-				String defaultFontId = fontDefinition.getDefaultsTo();
-				FontDefinition defaultFontDefinition = themeRegistry.findFont(defaultFontId);
-				selectAndReveal(defaultFontDefinition);
-			} else {
-				ColorDefinition colorDefinition = getSelectedColorDefinition();
-				if (colorDefinition != null) {
-					String defaultColorId = colorDefinition.getDefaultsTo();
-					ColorDefinition defaultColorDefinition = themeRegistry
-							.findColor(defaultColorId);
-					selectAndReveal(defaultColorDefinition);
+		goToDefaultButton.addSelectionListener(new SelectionAdapter() {
+			@Override
+			public void widgetSelected(SelectionEvent event) {
+				FontDefinition fontDefinition = getSelectedFontDefinition();
+				if (fontDefinition != null) {
+					String defaultFontId = fontDefinition.getDefaultsTo();
+					FontDefinition defaultFontDefinition = themeRegistry.findFont(defaultFontId);
+					selectAndReveal(defaultFontDefinition);
+				} else {
+					ColorDefinition colorDefinition = getSelectedColorDefinition();
+					if (colorDefinition != null) {
+						String defaultColorId = colorDefinition.getDefaultsTo();
+						ColorDefinition defaultColorDefinition = themeRegistry
+								.findColor(defaultColorId);
+						selectAndReveal(defaultColorDefinition);
+					}
 				}
+				updateControls();
 			}
-			updateControls();
-		}));
+		});
 
-		expandAllButton.addSelectionListener(widgetSelectedAdapter(event -> tree.getViewer().expandAll()));
+		expandAllButton.addSelectionListener(new SelectionAdapter() {
+			@Override
+			public void widgetSelected(SelectionEvent event) {
+				tree.getViewer().expandAll();
+			}
+		});
 
     }
 
     @Override
 	public void init(IWorkbench aWorkbench) {
         this.workbench = (Workbench) aWorkbench;
-		themeEngine = workbench.getService(IThemeEngine.class);
+		themeEngine = (IThemeEngine) workbench.getService(IThemeEngine.class);
         setPreferenceStore(PrefUtil.getInternalPreferenceStore());
 
         final IThemeManager themeManager = aWorkbench.getThemeManager();
-        themeChangeListener = event -> {
-		    if (event.getProperty().equals(
-		            IThemeManager.CHANGE_CURRENT_THEME)) {
-		        updateThemeInfo(themeManager);
-		        refreshCategory();
-				refreshAllLabels();
-		    }
-		};
+        themeChangeListener = new IPropertyChangeListener() {
+            @Override
+			public void propertyChange(PropertyChangeEvent event) {
+                if (event.getProperty().equals(
+                        IThemeManager.CHANGE_CURRENT_THEME)) {
+                    updateThemeInfo(themeManager);
+                    refreshCategory();
+					refreshAllLabels();
+                }
+            }
+        };
         themeManager.addPropertyChangeListener(themeChangeListener);
 
         updateThemeInfo(themeManager);
 
-		eventBroker = workbench.getService(IEventBroker.class);
+        eventBroker = (IEventBroker) workbench.getService(IEventBroker.class);
 		eventBroker.subscribe(WorkbenchThemeManager.Events.THEME_REGISTRY_RESTYLED,
 				themeRegistryRestyledHandler);
     }
@@ -1495,7 +1533,7 @@ getPreferenceStore(),
 	}
 
     @Override
-	public void performDefaults() {
+	protected void performDefaults() {
         performColorDefaults();
         performFontDefaults();
 		updateControls();
@@ -1627,19 +1665,21 @@ getPreferenceStore(),
         }
     }
 
-	private void setDescendantRegistryValues(FontDefinition definition, FontData[] datas, boolean reset) {
+    private void setDescendantRegistryValues(FontDefinition definition, FontData[] datas) {
         FontDefinition[] children = getDescendantFonts(definition);
+
         for (int i = 0; i < children.length; i++) {
             if (isDefault(children[i])) {
-				setFontPreferenceValue(children[i], datas, reset);
+                setDescendantRegistryValues(children[i], datas);
+                setRegistryValue(children[i], datas);
+                fontValuesToSet.put(children[i].getId(), datas);
+				fontPreferencesToSet.remove(children[i]);
             }
         }
     }
 
 	protected void setFontPreferenceValue(FontDefinition definition, FontData[] datas, boolean reset) {
-		// descendant values must be computed and set before updating current,
-		// or isDefault will miss them
-		setDescendantRegistryValues(definition, datas, reset);
+        setDescendantRegistryValues(definition, datas);
 		fontPreferencesToSet.put(definition, datas);
 		setRegistryValue(definition, datas);
 		updateDefinitionState(definition, reset);
@@ -1786,7 +1826,7 @@ getPreferenceStore(),
 		String expandedElementsString = getPreferenceStore().getString(EXPANDED_ELEMENTS_PREF);
 		if (expandedElementsString == null)
 			return;
-		String[] expandedElementIDs = expandedElementsString.split(EXPANDED_ELEMENTS_TOKEN);
+		String[] expandedElementIDs = Util.getArrayFromList(expandedElementsString, EXPANDED_ELEMENTS_TOKEN);
 		if (expandedElementIDs.length == 0)
 			return;
 
@@ -2009,9 +2049,12 @@ getPreferenceStore(),
 		fontSampler.setLayout(gridLayout);
 		fontSampler.setLayoutData(new GridData(GridData.FILL_BOTH));
 
-		fontSampler.addPaintListener(e -> {
-			if (currentFont != null) // do the font preview
-				paintFontSample(e.gc);
+		fontSampler.addPaintListener(new PaintListener() {
+			@Override
+			public void paintControl(PaintEvent e) {
+				if (currentFont != null) // do the font preview
+					paintFontSample(e.gc);
+			}
 		});
 		return fontSampler;
 	}
@@ -2050,9 +2093,12 @@ getPreferenceStore(),
 		colorSampler.setLayout(gridLayout);
 		colorSampler.setLayoutData(new GridData(GridData.FILL_BOTH));
 
-		colorSampler.addPaintListener(e -> {
-			if (currentColor != null) // do the color preview
-				paintColorSample(e.gc);
+		colorSampler.addPaintListener(new PaintListener() {
+			@Override
+			public void paintControl(PaintEvent e) {
+				if (currentColor != null) // do the color preview
+					paintColorSample(e.gc);
+			}
 		});
 		return colorSampler;
 	}
@@ -2071,8 +2117,8 @@ getPreferenceStore(),
 		String messageTop = RESOURCE_BUNDLE.getString("fontColorSample"); //$NON-NLS-1$
 		String fontColorString = RESOURCE_BUNDLE.getString("fontColorString"); //$NON-NLS-1$
 		RGB rgb = currentColor.getRGB();
-		String messageBottom = MessageFormat.format(fontColorString, Integer.valueOf(rgb.red),
-				Integer.valueOf(rgb.green), Integer.valueOf(rgb.blue));
+		String messageBottom = MessageFormat
+				.format(fontColorString, new Object[] { new Integer(rgb.red), new Integer(rgb.green), new Integer(rgb.blue) });
 
 		// calculate position of the vertical line
 		int separator = (clientArea.width - 2) / 3;
@@ -2166,12 +2212,9 @@ getPreferenceStore(),
 
 	private boolean isAvailableInCurrentTheme(ThemeElementDefinition definition) {
 		if (definition instanceof ColorDefinition) {
-			ColorDefinition colorDef = (ColorDefinition) definition;
-			RGB value = colorDef.getValue();
-			if ((value == null || value == EMPTY_COLOR_VALUE) && colorDef.getDefaultsTo() == null) {
-				return false;
-			}
-			return colorRegistry.get(definition.getId()) != null;
+			RGB value = ((ColorDefinition) definition).getValue();
+			return value != null && value != EMPTY_COLOR_VALUE
+					&& colorRegistry.get(definition.getId()) != null;
 		}
 		return true;
 	}
@@ -2182,7 +2225,7 @@ getPreferenceStore(),
 			return description;
 		}
 		return MessageFormat.format(RESOURCE_BUNDLE.getString("definitionNotAvailInTheme"), //$NON-NLS-1$
-				description).trim();
+				new Object[] { description }).trim();
 	}
 
 	private void updateDefinitionState(ThemeElementDefinition definition, boolean reset) {
